feat: Improve documenting of routes
